--- a/about.css
+++ b/about.css
@@ -1,7 +1,10 @@
 body {
-  background-color: rgba(255, 255, 255, 0.886);
+  background-image: url("bkg.jpeg");
+  background-size: cover;
+  background-position: center center;
   overflow-x: hidden;
 }
+
 
 
 .both-logos {
@@ -21,7 +24,7 @@ body {
 }
 
 .logo-text {
-   margin-left: -50px;
+   margin-left: -80px;
   font-family: "San Francisco", sans-serif;
   color: rgb(0, 0, 0);
   font-size: 28px;
@@ -40,7 +43,7 @@ body {
     margin: 10px;
     padding: 10px;
     color: #333;
-    background-color: white;
+    background-color: transparent;
     text-align: center;
     margin-top: 5%;
     position: sticky;
@@ -70,9 +73,12 @@ margin-bottom: -15%;
 
 
 
-a:hover {
-  color: rgb(44, 44, 219);
-}
+
+  a:hover {
+    color: rgb(213, 57, 1);
+    transition: 0.3s;    
+    transform: translateY(-0.1em);
+  }
 
 
 /* About begins */
@@ -80,7 +86,7 @@ a:hover {
 
 
 .about-section {
-    background: #f5f5f5;
+    background: transparent;
     padding: 20px;
     border-radius: 10px;
     margin: 20px;
@@ -91,7 +97,13 @@ a:hover {
 }
 
 .heading {
-    background-image: linear-gradient(to right, #de7df2, #a0f1ea);
+  background-image: 
+  linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0) 40%,rgba(0,0,0,1) 100%),
+  url(about.jpeg);
+  background-repeat: no-repeat;
+  background-position: center 30%;
+background-size: 100%;
+height: 100px;
     color: #fff;
     padding: 10px;
     border-radius: 5px;
@@ -272,13 +284,13 @@ img {
 
 
 footer {
-  margin-top: -95%;
-  background-image: linear-gradient(to right,#081425 , #42431f);
+  margin-top: -55%;
+  background: radial-gradient(circle at -8.9% 51.2%, rgb(255, 124, 0) 0%, rgb(255, 124, 0) 15.9%, rgb(255, 163, 77) 15.9%, rgb(255, 163, 77) 24.4%, rgb(19, 30, 37) 24.5%, rgb(19, 30, 37) 66%);
   color: #fff;
   text-align: center; /* Center the content within the footer */
   padding: 2rem 0; /* Adjust padding as needed */
   position: relative;
-  top: 600px;
+  /* top: 600px; */
 }
 
 footer img {
