--- a/contact.css
+++ b/contact.css
@@ -1,7 +1,9 @@
 body {
-    background-color: rgba(255, 255, 255, 0.886);
-    overflow-x: hidden;
-  }
+  background-image: url("bkg.jpeg");
+  background-size: cover;
+  background-position: center center;
+}
+
   
   
   .both-logos {
@@ -24,36 +26,26 @@ body {
 }
   
   
-  .home,
-    .about,
-    .portfolio,
-    .services,
-    .contact , .projects {
-    
-      font-size: 20px;
-      color: #333;
-      background-color: white;
-     
-    }
-    
-    
-    .nav{
-     
-  
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(5em, 1fr));
-      position: relative;
-      top: -12em;
-      text-align: center;
-    }
-  
-  
+.nav {
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  top: 04em;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: clamp(16px, 2vw, 20px);}
+
+nav a {
+  color: black;
+  padding: 20px;
+}
+
   
   
   
   
   a:hover {
-    color: rgb(44, 44, 219);
+    color: rgb(213, 57, 1);
     transition: 0.3s;    
     transform: translateY(-0.1em);
   }
@@ -82,7 +74,12 @@ font-size: 3rem , 1.5rem;
 }
 
 
-
+.contact-img {
+  position: absolute;
+  top: 20em;
+  max-width: 30em;
+  right: 15rem;
+}
 
 
 
@@ -125,8 +122,7 @@ form {
   
   footer {
     margin-top: 5%;
-    background-image: linear-gradient(to right,#081425 , #42431f);
-  
+    background: radial-gradient(circle at -8.9% 51.2%, rgb(255, 124, 0) 0%, rgb(255, 124, 0) 15.9%, rgb(255, 163, 77) 15.9%, rgb(255, 163, 77) 24.4%, rgb(19, 30, 37) 24.5%, rgb(19, 30, 37) 66%);
     color: #fff;
     text-align: center; 
     padding: 2rem 0; 
@@ -162,6 +158,21 @@ form {
     margin-top: 2rem;
   }
   
+
+  @media (max-width: 968px) {
+    .contact-img {
+      max-width: 20em;
+      right: 5rem;
+    }
+  }
+
+  @media (max-width: 820px) {
+    .contact-img {
+      max-width: 20em;
+      right: 5rem;
+    }
+  }
+
   @media (max-width: 550px) {
   
     .both-logos {
@@ -186,13 +197,22 @@ form {
 
     }
 
+    .nav {
+      display: flex;
+      justify-content: center;
+      position: absolute;
+      top: 06em;
+      left: 50%;
+      transform: translateX(-50%);
+      font-size: 15px;}
+
+
     .home,
     .about,
     .portfolio,
     .services,
     .contact , .projects {
-    
-      font-size: 16px;
+    padding: 10px;
       margin-top: 5em;
       transition: all ease 0.3s;
      
@@ -209,7 +229,16 @@ form {
         margin-left: 1em; 
       }
 
+   
+        .contact-img {
+          max-width: 15em;
+          right: 5rem;
+        }
       
+          .contact-img {
+            max-width: 15em;
+            right: 1rem;
+          }
 
     }
 
@@ -224,9 +253,9 @@ form {
       }
       
       .logo-text {
-        margin-left: -1em;
+        margin-left: -2em;
         min-width: 1em;
-      margin-top: 3em;
+      margin-top: 5em;
       transition: 0.3s;
 
     }
@@ -250,13 +279,22 @@ form {
         .services,
         .contact , .projects {
         
-          font-size: 14px;
           transition: all ease 0.3s;
-         
+         padding: 10px;
         }
 
+        .nav {
+          display: flex;
+          justify-content: center;
+          position: absolute;
+          top: 06em;
+          left: 50%;
+          transform: translateX(-50%);
+          font-size: 10px;}
+
+          
         h2 {
-          font-size: 23px;
+          font-size: 20px;
           margin-bottom: 10px;
         }
 
