--- a/projects.css
+++ b/projects.css
@@ -1,6 +1,9 @@
 body {
-    background-color: rgba(255, 255, 255, 0.886);
-  }
+  background-image: url("bkg.jpeg");
+  background-size: cover;
+  background-position: center center;
+}
+
   
   
   .both-logos {
@@ -20,7 +23,7 @@ body {
   }
   
   .logo-text {
-     margin-left: -50px;
+    margin-left: -80px;
     font-family: "San Francisco", sans-serif;
     color: rgb(0, 0, 0);
     font-size: 28px;
@@ -39,7 +42,7 @@ body {
       margin: 10px;
       padding: 10px;
       color: #333;
-      background-color: white;
+      background-color: transparent;
       text-align: center;
       margin-top: 5%;
       position: sticky;
@@ -65,14 +68,11 @@ body {
     }
   
   
-  
-  
-  
-  
-  a:hover {
-    color: rgb(82, 195, 232);
-  }
-  
+    a:hover {
+      color: rgb(213, 57, 1);
+      transition: 0.3s;    
+      transform: translateY(-0.1em);
+    }
 
   .project-heading {
     font-size: 25px;
@@ -307,7 +307,7 @@ body {
   
 footer {
   margin-top: 0%;
-  background-image: linear-gradient(to right,#081425 , #42431f);
+  background: radial-gradient(circle at -8.9% 51.2%, rgb(255, 124, 0) 0%, rgb(255, 124, 0) 15.9%, rgb(255, 163, 77) 15.9%, rgb(255, 163, 77) 24.4%, rgb(19, 30, 37) 24.5%, rgb(19, 30, 37) 66%);
 
   color: #fff;
   text-align: center; /* Center the content within the footer */
