--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@ html{
 
 }
 
+body {
+  background-image: url("bkg.jpeg");
+  background-size: cover;
+  background-position: center center;
+}
 
 
 .both-logos {
@@ -24,7 +29,7 @@ html{
 }
 
 .logo-text {
-   margin-left: -50px;
+  margin-left: -80px;
   font-family: "San Francisco", sans-serif;
   color: rgb(0, 0, 0);
   font-size: 28px;
@@ -43,7 +48,7 @@ html{
     margin: 10px;
     padding: 10px;
     color: #333;
-    background-color: white;
+    background-color: transparent;
     text-align: center;
     margin-top: 5%;
     position: sticky;
@@ -73,9 +78,12 @@ margin-bottom: -15%;
 
 
 
-a:hover {
-  color: rgb(82, 195, 232);
-}
+
+  a:hover {
+    color: rgb(213, 57, 1);
+    transition: 0.3s;    
+    transform: translateY(-0.1em);
+  }
 
 
 /* My Heading now */
@@ -118,7 +126,7 @@ h1.name:hover , h1.name2:hover {
   max-width: 600px;
   height: auto;
   transform: translate(120%, -60%);
- 
+ filter: blur(8px);
 }
 
 
@@ -159,6 +167,7 @@ left: 150px;
   max-width: 100%; 
   height: auto; 
   border-radius: 20px;
+  filter: blur(8px);
 }
 
 .image-info:hover{
@@ -229,7 +238,7 @@ button:hover {
   max-width: 100%;
   padding: 10px;
   display: none;
-  background: #fff;
+  background: transparent;
   
 }
 
@@ -291,7 +300,7 @@ button:hover {
 }
 
 form {
-  width: 50%;
+  max-width: 70%;
   position:   relative;
   top: 600px;
   left: 200px;
@@ -340,7 +349,7 @@ textarea {
 
 footer {
   margin-top: 5%;
-  background-image: linear-gradient(to right,#081425 , #42431f);
+  background: radial-gradient(circle at -8.9% 51.2%, rgb(255, 124, 0) 0%, rgb(255, 124, 0) 15.9%, rgb(255, 163, 77) 15.9%, rgb(255, 163, 77) 24.4%, rgb(19, 30, 37) 24.5%, rgb(19, 30, 37) 66%);
 
   color: #fff;
   text-align: center; /* Center the content within the footer */
@@ -378,7 +387,8 @@ footer img {
   transition: 0.5s;
   background: rgba(0, 0, 0, 0);
   color: var(--color);
-  font-size: 2.5em;
+  font-size: clamp(1rem, 5vw, 2rem); /* responsive font-size */ 
+
   -webkit-box-reflect: below 5px linear-gradient(to bottom, rgba(0,0,0,0,0), rgba(0,0,0,0,4));
 
 }
@@ -400,7 +410,8 @@ box-shadow: 0 0 5px var(--color),
 .footer-links a {
   color: #ffffff;
   text-decoration: none;
-  font-size: 1.5em;
+  font-size: clamp(1rem, 5vw, 1.5rem); /* responsive font-size */ 
+
   margin: 0 1rem; 
 }
 
@@ -820,7 +831,6 @@ footer{
 
   .nav {
     max-width: 100vw;
-
     left: -4em;
     
   }
@@ -840,7 +850,7 @@ footer{
     font-family: "San Francisco", sans-serif;
     text-align: left;
     width: 13rem;
-    margin-left: 3%;
+    margin-left: 2%;
     margin-top: 2.5%;
     font-size: 11px;
     position: relative;
@@ -851,9 +861,9 @@ footer{
   
 .pic {
   position: absolute;
-  max-width: 350px;
+  max-width: 300px;
   height: auto;
-  transform: translate(15%, -60%);
+  transform: translate(26%, -60%);
  
 }
 
@@ -954,6 +964,31 @@ footer{
       transition: all ease 0.3s;
       
     }
+
+
+    .shortbio {
+      max-width: 100vw;
+  
+      font-family: "San Francisco", sans-serif;
+      text-align: left;
+      width: 13rem;
+      margin-left: 3%;
+      margin-top: 2.5%;
+      font-size: 11px;
+      position: relative;
+      left: 0;
+      z-index: 999;
+    
+    }
+    
+  .pic {
+    position: absolute;
+    max-width: 300px;
+    height: auto;
+    transform: translate(28%, -60%);
+   transition: 0.3s;
+  }
+
       
   .serv {
     position: relative;
